--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,18 @@
-# Prerequisites
-*.d
-
-# Compiled Object files
-*.slo
-*.lo
+# Компиляция и исполняемые файлы
+*.exe
+*.out
 *.o
 *.obj
 
-# Precompiled Headers
-*.gch
-*.pch
+# Папки сборки
+build/
+bin/
 
-# Linker files
-*.ilk
+# IDE
+.vscode/
+.idea/
 
-# Debugger Files
-*.pdb
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
-
-# debug information files
-*.dwo
+# Временные файлы
+*.log
+*.tmp
+*.swp
